:bug: fix(CatalogoBusca): substituir toList() por collect(Collectors.toList()) para retornar listas mutáveis nos métodos da classe CatalogoBusca